Fix add to cart button wrapping too soon

--- a/source/stylesheets/layout.css.sass
+++ b/source/stylesheets/layout.css.sass
@@ -1,6 +1,5 @@
 @import 'config'
 
-
 /* TYPOGRAPHY  */
 body
   color: $primary-color
@@ -150,6 +149,7 @@ body
 /* Select box */
 .select
   +all-transitions
+  box-sizing: border-box
   position: relative
   border-radius: 5px
   border: 3px solid $primary-color
